--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "react-tsparticles": "^2.12.2",
-    "tsparticles-slim": "^2.12.0"
+    "three": "^0.180.0",
+    "tsparticles-slim": "^2.12.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
