Fix FTP server hostname

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,13 +16,18 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: Copy .htaccess
-        run: cp public/.htaccess dist/
+      - name: Copy .htaccess (if you added it)
+        run: cp public/.htaccess dist/ # Skip if you don't have this
       - name: Deploy to Hostinger
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          server: ftp.autolinium.com
-          username: u966234716.u1970autolinium
+          server: ftp://77.37.34.75 # e.g., srv123456.hostinger.com or 185.123.45.67
+          username: u966234716
           password: Believe07!!
-          local-dir: dist/
+          port: 21 # Explicitly set for plain FTP
+          protocol: ftp # Ensures plain FTP (not FTPS/SFTP)
+          local-dir: ./dist/ # Note the ./ for relative path
           server-dir: public_html/
+          exclude: | # Optional: Exclude unnecessary files
+            **/.git*
+            **/node_modules*
