--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           port: 21
           protocol: ftp
           local-dir: ./dist/
-          server-dir: ./public_html/
+          server-dir: ./
           log-level: verbose # Debug: Detailed FTP logs
           exclude: |
             **/.git*
