--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "autolinium",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:analyze": "tsc -b && vite build --mode analyze",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "optimize:images": "./optimize-images.sh",
+    "analyze": "vite-bundle-visualizer"
   },
   "dependencies": {
     "framer-motion": "^12.23.22",
@@ -31,9 +34,13 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.18",
+    "terser": "^5.44.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-bundle-visualizer": "^1.0.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
